--- a/index.html
+++ b/index.html
@@ -8,28 +8,12 @@
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="product-card">
-            <img src="image/1.jpg" class="product-image" alt="Товар 1">
-            <h3>Помадка</h3>
-            <p>Цена: ₽ <span class="price">100</span></p>
-            <input type="number" class="quantity-input" value="1" min="1">
-            <button class="add-to-cart" onclick="addToCart(this)">В корзину</button>
-        </div>
-
-        <div class="product-card">
-            <img src="image/2.jpg" class="product-image" alt="Товар 2">
-            <h3>Корзинка</h3>
-            <p>Цена: ₽ <span class="price">150</span></p>
-            <input type="number" class="quantity-input" value="1" min="1">
-            <button class="add-to-cart" onclick="addToCart(this)">В корзину</button>
-        </div>
-    </div>
+    <div class="container"></div> <!-- Контейнер для карточек товаров -->
 
     <!-- Кнопка для открытия корзины -->
     <button id="open-cart-button" class="cart-button">Корзина</button>
 
-    <!-- Всплывающее окно корзины -->
+    <!-- Модальное окно корзины -->
     <div id="cart-modal" class="modal">
         <div class="modal-content">
             <span id="close-cart-button" class="close">&times;</span>
@@ -40,6 +24,7 @@
             <button id="checkout-button" class="add-to-cart">Оформить заказ</button>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
